--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,7 @@
-todoapp.title=ToDo APP
+todoapp.title=ToDo App
+todoapp.appName=ToDo App
+todoapp.signUp=Sign Up
+todoapp.login=Login
+todoapp.todoBox=To Do
+todoapp.inProgressBox=In Progress
+todoapp.doneBox=Done
